Chrome OS: Fix and re-enable LoginTest.GaiaAuthOffline test.

Revert "Revert "Chrome OS: Fix and re-enable LoginTest.GaiaAuthOffline test.""

This reverts commit 4de5b560f8837a86ee1da8486d4a731d87b22cf4 [formerly 45a7a301e7c2b90fa2fd9892d7b864930a225231]
and re-lands https://crrev.com/4750c95656 [formerly d4a2bb5757] with fixes.

Bug: 692364
Change-Id: I4dfea69a82cac07af1e79286ed7ce623b56e747e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1568777
Commit-Queue: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Toni Baržić <tbarzic@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#652991}
Former-commit-id: bb4919a186115e25ad90ebd9f956d6228c95c986